<resources>
    <string name="app_name">Waste To Taste</string>
    <string name="searchbar_recipe_hint">Cari resep</string>
    <string name="searchbar_ingredients_hint">Cari bahan</string>
    <string name="title_home">Beranda</string>
    <string name="title_pantry">Bahan</string>
    <string name="title_recipe">Resep</string>
    <string name="title_favorite">Favorit</string>
    <string name="title_settings">Pengaturan</string>
    <string name="recipe_name">Nama Resep</string>
    <string name="ingredients_needed">Anda membutuhkan n bahan lagi</string>
    <string name="ingredient">bahan</string>
    <string name="greetings">Halo!</string>
    <string name="greetings2">Mau masak apa hari ini?</string>
    <string name="tampilan">Tampilan</string>
    <string name="tema">Tema</string>
    <string name="akun">Akun</string>
    <string name="informasi_akun">Informasi Akun</string>
    <string name="keluar">Keluar</string>
    <string name="email">Email</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="dummy_email">user@email.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_account_info">Account Info</string>
    <string name="simpan">Simpan</string>
    <string name="change_password">Ubah Password</string>
    <string name="change_email">Ubah Email</string>
    <string name="dummy_password">12345678</string>
    <string name="old_password">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="account_information_title">Informasi Akun</string>
    <string name="title_more">More</string>
    <string name="name">Nama</string>
    <string name="password">Password</string>
    <string name="sign_up">Daftar</string>
    <string name="already_have_account">Sudah memiliki akun?</string>
    <string name="welcome">Selamat Datang!</string>
    <string name="sign_up_instruction">Daftar di bawah ini untuk memulai</string>
    <string name="log_in">Masuk</string>
    <string name="dont_have_account">Belum memiliki akun?</string>
    <string name="welcome_back">Selamat Datang Kembali!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="delete_all">Hapus Semua</string>
    <string name="nullEmail">Email tidak boleh kosong</string>
    <string name="nullPass">Password tidak boleh kosong</string>
    <string name="failedLogin">Pastikan kamu memasukkan data yang benar</string>
    <string name="mismatchPass">Passwords tidak cocok</string>
    <string name="invalidEmailAddress">Format email salah. Dibutuhkan "@"</string>
    <string name="emailIsInUse">Email sudah digunakan, pilih email lain</string>
    <string name="nullName">Nama tidak boleh kosong</string>
    <string name="passwordLess">Password harus lebih dari 8 karakter</string>
    <string name="nullConfirmPass">Konfirmasi password tidak boleh kosong</string>
    <string name="halouser">Halo, %1$s!</string>
    <string name="logout">Log Out</string>
    <string name="logoutWarn">Kamu yakin mau keluar?</string>
    <string name="logoutNo">Tidak</string>
    <string name="logoutYes">Ya</string>
    <string name="logoutSucceed">Sukses Logout</string>
    <string name="create_account">Buat Akun</string>
    <string name="login_to_account">Masuk Akun</string>
    <string name="get_started_instruction">Ubah sisa bahan makananmu menjadi hidangan lezat!</string>
    <string name="get_started">Mulai</string>
    <string name="dialog_delete_all_desc">Data yang sudah dihapus tidak dapat dikembalikan</string>
    <string name="dialog_delete_all_title">Hapus semua bahan?</string>
    <string name="delete">Hapus</string>
    <string name="cancel">Batal</string>
    <string name="unknown">tidak diketahui</string>
    <string name="ingredients">Bahan-bahan</string>
    <string name="dummy_recipe_ingredients">
        2 potong ayam
        \n1 butir telur
        \n5 sendok tepung terigu
        \n3 sendok tepung maizena
        \n3 siung bawang putih
        \nSecukupnya merica
        \nSecukupnya garam
        \nSecukupnya minyak goreng
        \n1 batang daun kemangi
    </string>
    <string name="dummy_recipe_instruction">
        1. Masukkan ayam. Tambahkan bawang putih halus, merica, dan garam. (Bisa menambahkan bumbu penyedap jika Anda sukai) Oh iya maaf, mericanya terlihat seperti ketumbar yaa. karena stok merica bubuk habis alhasil pakai merica asli dan males diulek sampai halus.
        \n2. Remas-remas ayam, sampai bumbu tercampur rata dan teresap. Tinggalkan selama kurang lebih 2 jam (semakin lama semakin baik, agar bumbu meresap pada ayam)
        \n3. Setelah Anda merasa bumbu telah meresap, masukkan 1 butir telur. Kocok hingga semua permukaan ayam terlumuri telur.
        \n4. Siapkan tepung terigu dan tepung maizena, campurkan. Lalu masukkan ayam yang telah dilumuri telur kedalam tepung. Pastikan semua permukaan ayam tertutupi tepung yaa.
        \n5. Setelah minyak goreng panas, masukkan ayam. Goreng ayam dengan api kecil agar ayam matang sampai didalamnya. Goreng sampai berubah warna menjadi kuning keemasan lalu balik perlahan.
        \n6. Tunggu sampai kedua sisi ayam matang dan berubah menjadi kuning keemasan. Lalu tiriskan. (Bisa juga dijadiin resep ayam krispi hihi)
        \n7. Sambel: masukkan bawang putih yang telah di goreng, cabe, garam. Ulek sampai halus. Tambahkan 2 sendok minyak goreng panas bekas menggoreng ayam.
        \n8. Geprek ayam pada sambel. Berikan daun kemangi jika Anda suka. Ayam geprek pedas siap disantap!
        \n9. Jika ingin ikutin makanan kekinian, bisa ditambahin keju parut atau lelehan keju mozarella yaa.
    </string>
    <string name="instruction">Cara Membuat</string>
</resources>