<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:minHeight="?attr/actionBarSize"
            app:titleCentered="true"
            android:paddingEnd="3dp"
            app:title="@string/app_name"
            app:titleMarginBottom="13dp"
            app:titleTextAppearance="@style/TextAppearance.App.TitleLarge"
            app:navigationIconTint="?attr/colorOnSurface"
            app:navigationIcon="@drawable/ic_back">

            <ToggleButton
                android:id="@+id/toggleBookmark"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:textOff=""
                android:textOn=""
                android:background="@drawable/ic_bookmark"
                android:checked="false"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"/>
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/AppBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_recipe"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/images"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                app:layout_constraintTop_toBottomOf="@id/iv_recipe"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:lineSpacingExtra="1dp"
                android:text="@string/recipe_name"
                android:gravity="center"
                android:fontFamily="@font/inter_semi_bold"
                android:textSize="21sp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/tv_ingredients_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:fontFamily="@font/inter_semi_bold"
                android:textSize="16sp"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_recipe_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="17dp"/>

            <TextView
                android:id="@+id/tv_ingredients"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@+id/tv_ingredients_title"
                app:layout_constraintEnd_toEndOf="@+id/tv_ingredients_title"
                app:layout_constraintTop_toBottomOf="@id/tv_ingredients_title"
                android:textSize="16sp"
                android:fontFamily="@font/inter_regular"
                android:lineSpacingExtra="5dp"
                tools:text="@string/dummy_recipe_ingredients"/>

            <TextView
                android:id="@+id/tv_instruction_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_ingredients"
                app:layout_constraintStart_toStartOf="@id/tv_ingredients"
                app:layout_constraintEnd_toEndOf="@id/tv_ingredients"
                android:text="@string/instruction"
                android:textSize="16sp"
                android:layout_marginTop="25dp"
                android:lineSpacingExtra="5dp"
                android:fontFamily="@font/inter_semi_bold"/>

            <TextView
                android:id="@+id/tv_instruction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@+id/tv_instruction_title"
                app:layout_constraintEnd_toEndOf="@+id/tv_instruction_title"
                app:layout_constraintTop_toBottomOf="@id/tv_instruction_title"
                android:textSize="16sp"
                android:fontFamily="@font/inter_regular"
                android:lineSpacingExtra="5dp"
                tools:text="@string/dummy_recipe_instruction"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
