<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/rectangle"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintVertical_bias="0"
                    android:background="@color/green"/>

                <TextView
                    android:id="@+id/greetings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/halouser"
                    android:letterSpacing="0.03"
                    android:layout_marginTop="34dp"
                    android:layout_marginHorizontal="20dp"
                    android:textSize="28sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/dosis_semi_bold"
                    app:layout_constraintTop_toTopOf="@id/rectangle"
                    app:layout_constraintStart_toStartOf="@id/rectangle"
                    app:layout_constraintEnd_toEndOf="@id/rectangle"/>

                <TextView
                    android:id="@+id/greetings2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="1dp"
                    android:text="@string/greetings2"
                    android:letterSpacing="0.02"
                    android:textSize="14.7sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_regular"
                    app:layout_constraintTop_toBottomOf="@id/greetings"
                    app:layout_constraintStart_toStartOf="@id/greetings"
                    app:layout_constraintEnd_toEndOf="@id/rectangle"/>

                <com.google.android.material.search.SearchBar
                    android:id="@+id/searchBar"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    app:layout_constraintVertical_bias="1"
                    android:layout_marginBottom="26dp"
                    android:layout_marginHorizontal="15dp"
                    android:hint="@string/searchbar_recipe_hint"
                    android:textAppearance="@style/TextAppearance.SearchBar"
                    app:layout_constraintBottom_toBottomOf="@+id/rectangle"
                    app:layout_constraintEnd_toEndOf="@id/rectangle"
                    app:layout_constraintStart_toStartOf="@id/rectangle"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.search.SearchView
                    android:id="@+id/searchView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:hint="@string/searchbar_recipe_hint"
                    app:layout_anchor="@id/searchBar"
                    android:textAppearance="@style/TextAppearance.SearchBar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent">
                </com.google.android.material.search.SearchView>

                <TextView
                    android:id="@+id/tv_my_pantry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lemari Bahan"
                    android:textSize="20sp"
                    android:textColor="?attr/colorOnSurface"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:fontFamily="@font/dosis_semi_bold"
                    app:layout_constraintHorizontal_bias="0"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="11dp"
                    app:layout_constraintTop_toBottomOf="@id/rectangle"
                    app:layout_constraintBottom_toTopOf="@id/pantry_container"/>

                <TextView
                    android:id="@+id/tv_pantry_see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lihat Semua"
                    android:layout_marginBottom="8dp"
                    android:textSize="13sp"
                    android:textColor="?attr/colorOnSurface"
                    android:fontFamily="@font/inter_regular"
                    app:layout_constraintStart_toEndOf="@id/tv_my_pantry"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rectangle"
                    app:layout_constraintBottom_toTopOf="@id/pantry_container"
                    android:layout_marginEnd="19dp"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintVertical_bias="1"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/pantry_container"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    app:cardBackgroundColor="?attr/colorSurfaceContainer"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.281"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_my_pantry"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:padding="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="16dp"
                    app:layout_constraintTop_toTopOf="@id/pantry_container"
                    app:layout_constraintBottom_toBottomOf="@id/pantry_container"
                    app:layout_constraintStart_toStartOf="@id/pantry_container"
                    app:layout_constraintEnd_toEndOf="@id/pantry_container"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>